# M11-Ponderadas

./: .gitignore  README.md
Semana1/: analiseExploratoria.Rmd  analiseExploratoria.html  analiseExploratoria.tex
Semana3/data_pipeline/: .env  README.md  app.py  docker-compose.yaml  downloaded_raw_data_20240825191846.parquet  downloaded_raw_data_20240825192058.parquet  pokedex_integration.py  pyproject.toml  raw_data_20240825190706.parquet  raw_data_20240825190930.parquet  raw_data_20240825215933.parquet  raw_data_20240825215957.parquet  requests.http  requirements.txt  test.txt  test_app.py  teste_minio.py
Semana3/data_pipeline/data_pipeline/: clickhouse_client.py  data_processing.py  minio_client.py
Semana3/data_pipeline/sql/: create_table.sql
Semana3/matematica/: mat.py
